# WebDogfight

./: .clangd  .gitignore  CMakeLists.txt  README.md  WebDogfight.json  output.json  serve.py  shell_minimal.html
.zed/: debug.json  settings.json  tasks.json
client/audio/: backend.hpp
client/gameplay/: clouds.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  water.cpp  widget.hpp
client/io/: input.cpp
client/networking/: network_manager.cpp
resources/aircraft/: FA-XX.json
resources/maps/: island.json
resources/meshes/: demo_jet.gltf  iso.gltf  sphere.gltf  torus.gltf
resources/shaders/: aircraft.glsl  clouds.glsl  compass.glsl  debug.glsl  explosion.glsl  flat.glsl  font.glsl  particles.glsl  radar.glsl  skeletal.glsl  skybox.glsl  terrain.glsl  test.glsl  trails.glsl  ui_circle.glsl  ui_ring.glsl  ui_square.glsl  water.glsl
resources/terrains/: default.json
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
src/audio/: backend.cpp  backend.hpp
src/gameplay/: WebDogfight copy.html  WebDogfight.js  WebDogfight.wasm  aircraft.cpp  aircraft.hpp  clouds.cpp  clouds.hpp  entity.hpp  environment.hpp  explosion.cpp  explosion.hpp  menu_scene.cpp  menu_scene.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  terrain.cpp  terrain.hpp  test_scene.cpp  test_scene.hpp  ui.cpp  ui.hpp  water.cpp  water.hpp  widget.cpp  widget.hpp
src/graphics/: backend.cpp  backend.hpp  loader.cpp  loader.hpp  types.cpp  types.hpp  window.cpp  window.hpp
src/io/: files.cpp  files.hpp  input.cpp  input.hpp  time.cpp  time.hpp
src/networking/: network_game.hpp  network_manager.cpp  network_manager.hpp  network_types.hpp
src/utils/: instrumentor.hpp  math.hpp  misc.hpp
