cmake_minimum_required(VERSION 3.8)
project("WebDogfight")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)

if(EMSCRIPTEN)
    message(STATUS "Building for WebGL with Emscripten")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_GLFW=3")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGL2=1")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s MIN_WEBGL_VERSION=2")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s MAX_WEBGL_VERSION=2")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s ALLOW_MEMORY_GROWTH=1")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --shell-file ${CMAKE_SOURCE_DIR}/cmake-build-web/shell_minimal.html")

    set(CMAKE_EXECUTABLE_SUFFIX ".html")

    # Only add GLM for Emscripten (skip GLFW since it's provided)
    add_subdirectory("vendor/glm")

    file(GLOB_RECURSE src CONFIGURE_DEPENDS "src/*.cpp" "src/*.hpp")
    add_executable(WebDogfight ${src})
    target_link_libraries(WebDogfight glm)
    file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/resources" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
else()
    message(STATUS "Building for GLFW")
    add_subdirectory("vendor/glfw")
    add_subdirectory("vendor/glm")
    file(GLOB_RECURSE src CONFIGURE_DEPENDS "src/*.cpp" "src/*.hpp" "vendor/glad/src/glad.c")
    add_executable(WebDogfight ${src})
    target_include_directories(WebDogfight PUBLIC "vendor/glad/include")
    target_link_libraries(WebDogfight glfw glm)
    file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/resources" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
endif()
